2015-08-01  Kaz Kylheku  <kaz@kylheku.com>

	Big TXR Lisp documentation rearrangement.

	* txr.1: Numerous sections moved around. Miscellaneous formatting
	and wording fixes. New sections under TXR Lisp intro section.

2015-07-31  Kaz Kylheku  <kaz@kylheku.com>

	string_output renamed to string_out

	* stream.c (struct string_output): Renamed to string_out.
	(string_out_stream_destroy, string_out_byte_callback,
	string_out_put_char, strnig_out_put_string, string_out_put_byte,
	make_string_output_stream, get_string_from_stream): Follow rename.

2015-07-31  Kaz Kylheku  <kaz@kylheku.com>

	Simplify type check code in stream module.

	* stream.c (get_string_from_stream, get_list_from_stream,
	stream_set_prop, stream_get_prop, close_stream, get_line,
	get_char, get_byte, unget_char, unget_byte, put_string,
	put_char, put_byte, flush_stream, seek_stream): Use cobj_handle and
	cobj_ops instead of type_check and type_assert.
	(get_indent_mode, test_set_indent_mode, set_indent_mode,
	get_indent, set_indent, inc_indent, width_check): Use cobj_handle
	and cobj_ops instead of stream->co.handle and stream->co.ops
	for safety.

	(vformat, format): Use class_check instead of type_check and
	type_assert.

2015-07-31  Kaz Kylheku  <kaz@kylheku.com>

	Multi-line, indented printing of structure.

	* eval.c (op_error): New static function.
	(macro_form_p, fboundp): Static to external.
	(special_operator_p): New function.
	(eval_init): Register macrolet and symacrolet to op_error.
	These are recognized and processed by expand, but we want
	them in the op table so they are reported by special_operator_p.

	* eval.h (fboundp, macro_form_p, special_operator_p): Declared.

	* hash.c (print_key_val): Break long lines on spaces
	between pairs with stream_width_check.
	(hash_print_op): Implement split and indented printing.

	* lib.c (obj_print_impl): New static function, resulting
	from a merge of obj_print and obj_pprint. Fixes some